fixed cart layout bugs by removing bootstrap d-flex class in li

--- a/style.css
+++ b/style.css
@@ -1128,7 +1128,8 @@ p.sub-content {
 }
 
 img.cart-img {
-  width: 40%;
+  width: 80px;
+  height: 80px;
   border: 1px solid rgb(209, 208, 208);
 }
 
@@ -1234,6 +1235,8 @@ p.remove-text:hover {
 .clickedButton {
     background-color: #dee2e6;
 }
+
 .graph-grid{
     width:100%;
 }
+
